# flexibility-api

./: .env.example  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  taskfile.yaml
.github/workflows/: release.yaml  update-docs.yaml
alembic/: env.py
alembic/versions/: ba7f4e952953_initial.py
docs/: api-reference.md  architecture.md
policies/: flexibility.rego
src/celine/flexibility/: main.py
src/celine/flexibility/api/: commitments.py  deps.py  suggestions.py
src/celine/flexibility/core/: config.py
src/celine/flexibility/db/: __init__.py  session.py
src/celine/flexibility/models/: __init__.py  commitment.py
src/celine/flexibility/routes/: __init__.py
src/celine/flexibility/schemas/: __init__.py  commitment.py  suggestion.py
src/celine/flexibility/security/: __init__.py  auth.py  middleware.py  policy.py
src/celine/flexibility/services/: nudge_opportunity.py  pipeline_listener.py  reminders.py  schedule_nudge.py  settlement.py
